[gd_scene load_steps=2 format=3 uid="uid://fbkui_001"]

[ext_resource type="Script" path="res://game/scripts/ui/FeedbackUI.gd" id="1_script"]

[node name="FeedbackUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -110.0
offset_right = 140.0
offset_bottom = 110.0

[node name="TitleLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 8.0
offset_right = 270.0
offset_bottom = 24.0
text = "Send Feedback"
horizontal_alignment = 1

[node name="CategoryLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 32.0
offset_right = 70.0
offset_bottom = 48.0
text = "Category:"

[node name="CategoryButton" type="Button" parent="Panel"]
offset_left = 80.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 50.0
text = "General"

[node name="MessageLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 56.0
offset_right = 100.0
offset_bottom = 72.0
text = "Message:"

[node name="MessageInput" type="TextEdit" parent="Panel"]
offset_left = 10.0
offset_top = 76.0
offset_right = 270.0
offset_bottom = 146.0
placeholder_text = "Tell us what you think..."

[node name="EmailLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 152.0
offset_right = 100.0
offset_bottom = 168.0
text = "Email (optional):"

[node name="EmailInput" type="LineEdit" parent="Panel"]
offset_left = 10.0
offset_top = 170.0
offset_right = 270.0
offset_bottom = 190.0
placeholder_text = "your@email.com"

[node name="SubmitButton" type="Button" parent="Panel"]
offset_left = 140.0
offset_top = 196.0
offset_right = 210.0
offset_bottom = 216.0
text = "Submit"

[node name="CancelButton" type="Button" parent="Panel"]
offset_left = 70.0
offset_top = 196.0
offset_right = 130.0
offset_bottom = 216.0
text = "Cancel"

[node name="StatusLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 196.0
offset_right = 60.0
offset_bottom = 216.0
text = ""
